cmake_minimum_required(VERSION 3.10)
project(dns-server-test)
add_compile_options(-Wall -Wextra -Werror -Wpedantic)
add_link_options()
add_subdirectory(hashmap)
include_directories(include hashmap/include) 
add_executable(dns-server-test src/dns-server-test.c)
target_link_libraries(dns-server-test hashmap)
install(TARGETS dns-server-test DESTINATION /usr/bin)
